move HtmlEditor to RCL

--- a/HtmlEditorInBlazor/Pages/HtmlEditorPage.razor
+++ b/HtmlEditorInBlazor/Pages/HtmlEditorPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/htmlEditor"
 
-<HtmlEditor Value="value"/>
+<JSWidgetsRCL.DevExtremeComponents.DevExtremeHtmlEditor @bind-Html=value />
 
 @code {
     string value;
