--- a/HtmlEditorInBlazor/Pages/HtmlEditorPage.razor
+++ b/HtmlEditorInBlazor/Pages/HtmlEditorPage.razor
@@ -1,6 +1,7 @@
 ﻿@page "/htmlEditor"
+@using JSWidgetsRCL.DevExtremeComponents
 
-<JSWidgetsRCL.DevExtremeComponents.DevExtremeHtmlEditor @bind-Html=value />
+<DevExtremeHtmlEditor @bind-Html=value />
 
 @code {
     string value;
